# qa_guru_python_3_17

./: README.md
with_pipenv/: Pipfile
with_poetry/: pyproject.toml
with_requirements/: requirements.txt
