[tool.poetry]
name = "with-poetry"
version = "0.1.0"
description = ""
authors = ["skhomuti <skhomuti@gmail.com>"]
readme = "README.md"
packages = [{include = "with_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
selene = "2.0.0b14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
